[tool.poetry]
name = "pyproject-toml"
version = "0.1.0"
description = ""
authors = ["Marina Berdnikova <berdni4ka@rambler.ru>"]
readme = "README.md"
packages = [{include = "pyproject"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
